added som jps pages